--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -123,30 +123,34 @@
         <section class="section projetos" id="projetos-id">
             <h2>Projetos</h2>
             <div class="container">
-                <div class="project">
-
-                </div>
+                <div class="project"></div>
                 <div class="project-data">
                     <h4>Gerador de CPF</h4>
                     <p>Projeto desenvolvido com Javascript, HTML e CSS. Gera um CPF válido novo a cada clique.</p>
+                    <a class="visitar-site" target="_blank" href="https://guibaumer.github.io/cursoUdemy/0-exercicios/exercicio13-criacpf/index.html">VISITAR</a>
+
                 </div>
             </div>
 
             <div class="container">
-                <div class="project">
-
-                </div>
+                <div class="project project-2"></div>
                 <div class="project-data">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore ipsa, doloribus provident veritatis itaque at soluta molestiae non, dolore, officiis corporis vitae iste magnam mollitia est sequi hic laudantium ad.</p>
+                    <h4>Doceria</h4>
+                    <p>Projeto desenvolvido com HTML, CSS e um pouco de Javascript. Criado para exercitar a capacidade de replicar designs 
+                        e torná-los responsivos. Projeto do <a target="_blank" href="https://www.udemy.com/course/html5-e-css3-tecnicas-avancadas-com-flexbox-e-3-projetos/">curso de CSS Avançado do HoraDeCodar</a>.
+                    </p>
+                    <a class="visitar-site" target="_blank" href="https://guibaumer.github.io/css-avancado/0-projeto-doceria/">VISITAR</a>
+
                 </div>
             </div>
 
             <div class="container">
-                <div class="project">
-
-                </div>
+                <div class="project project-3"></div>
                 <div class="project-data">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore ipsa, doloribus provident veritatis itaque at soluta molestiae non, dolore, officiis corporis vitae iste magnam mollitia est sequi hic laudantium ad.</p>
+                    <h4>WhatsApp Clone</h4>
+                    <p>Site desenvolvido com apenas HTML e CSS (responsivo, assim como os outros). Projeto de clone do WhatsApp do <a target="_blank" href="https://www.udemy.com/course/html5-e-css3-tecnicas-avancadas-com-flexbox-e-3-projetos/">curso de CSS Avançado do HoraDeCodar</a>. </p>
+                    <a class="visitar-site" target="_blank" href="https://guibaumer.github.io/css-avancado/2-projeto-clone/meu-projeto/">VISITAR</a>
+
                 </div>
             </div>
         </section>
