--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -26,7 +26,7 @@
             <li><a href="#who-am-i">Quem sou?</a></li>
             <li><a href="#skills-id">Habilidades</a></li>
             <li><a href="#projetos-id">Projetos</a></li>
-            <li><a href="#">Contato</a></li>
+            <li><a href="#contato-id">Contato</a></li>
         </ul>
 
         <span class="material-symbols-outlined material-symbols-outlined-menu">
@@ -44,8 +44,8 @@
                         </span>
                     <li><a href="#who-am-i">Quem sou?</a></li>
                     <li><a href="#skills-id">Habilidades</a></li>
-                    <li><a href="#">Projetos</a></li>
-                    <li><a href="#">Contato</a></li>
+                    <li><a href="#projetos-id">Projetos</a></li>
+                    <li><a href="#contato-id">Contato</a></li>
                 </ul>        
             </div>
 
@@ -128,7 +128,6 @@
                     <h4>Gerador de CPF</h4>
                     <p>Projeto desenvolvido com Javascript, HTML e CSS. Gera um CPF válido novo a cada clique.</p>
                     <a class="visitar-site" target="_blank" href="https://guibaumer.github.io/cursoUdemy/0-exercicios/exercicio13-criacpf/index.html">VISITAR</a>
-
                 </div>
             </div>
 
@@ -155,12 +154,23 @@
             </div>
         </section>
 
-        <section class="section contato">
+        <section class="section contato" id="contato-id">
+
+            <div class="container-shadow">
+                <h2>Contato</h2>
+                <p><span class="negrito">Email para contato:</span> guilherme.a.baumer@gmail.com</p>
+                <div>
+                    <a href="">Linkedin</a>
+                    <a href="https://github.com/guibaumer" target="_blank">Github</a>
+                </div>
+            </div>
+
+            <img src="imgs/signboard.png" alt="">
         </section>
 
     </main>
     <footer>
-        <p>Site criado por <a href="#">Guilherme</a></p>
+        <p>Site criado por <a href="https://github.com/guibaumer" target="_blank">Guilherme</a>.</p>
     </footer>
     <script src="index.js"></script>
 </body>
