--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -152,6 +152,27 @@
 
                 </div>
             </div>
+
+            <div class="container">
+                <div class="project project-4"></div>
+                <div class="project-data">
+                    <h4>Página do Google</h4>
+                    <p>Site desenvolvido com apenas HTML e CSS (responsivo, assim como os outros). Projeto de clone do WhatsApp do <a target="_blank" href="https://www.udemy.com/course/html5-e-css3-tecnicas-avancadas-com-flexbox-e-3-projetos/">curso de CSS Avançado do HoraDeCodar</a>. </p>
+                    <a class="visitar-site" target="_blank" href="https://guibaumer.github.io/css-avancado/3-projeto-google/meu-projeto/">VISITAR</a>
+
+                </div>
+                </div>
+
+                <div class="container">
+                    <div class="project project-5"></div>
+                    <div class="project-data">
+                        <h4>Gerador de Senha</h4>
+                        <p>Site desenvolvido com HTML, CSS e Javascript. Gera uma senha conforme selecionadas as opções.</p>
+                        <a class="visitar-site" target="_blank" href="https://guibaumer.github.io/cursoUdemy/0-exercicios/exercicio14-senha/index.html">VISITAR</a>
+    
+                    </div>
+            </div>
+
         </section>
 
         <section class="section contato" id="contato-id">
