--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -42,10 +42,10 @@
                     <span class="material-symbols-outlined material-symbols-outlined-close">
                         close
                         </span>
-                    <li><a href="#who-am-i">Quem sou?</a></li>
-                    <li><a href="#skills-id">Habilidades</a></li>
-                    <li><a href="#projetos-id">Projetos</a></li>
-                    <li><a href="#contato-id">Contato</a></li>
+                    <li><a href="#who-am-i" class="link-desaparecer">Quem sou?</a></li>
+                    <li><a href="#skills-id" class="link-desaparecer">Habilidades</a></li>
+                    <li><a href="#projetos-id" class="link-desaparecer">Projetos</a></li>
+                    <li><a href="#contato-id" class="link-desaparecer">Contato</a></li>
                 </ul>        
             </div>
 
