--- a/restaurante/index.html
+++ b/restaurante/index.html
@@ -16,17 +16,30 @@
 <body>
 
     <header>
-        <p class="header-el"><a href="#home">HOME</a></p>
-        <p class="header-el"><a href="#quem-somos">QUEM SOMOS</a></p>
-        <p class="header-el"><a href="#menu">MENU</a></p>
-        <p class="header-el"><a href="#horarios">HORÁRIOS</a></p>
-        <p class="header-el"><a href="#contato-id">CONTATO</a></p>
+        <img src="imgs/svg/menu-svgrepo-com.svg" alt="" class="menu">
+        <div class="div-p-menu">
+            <p class="header-el"><a href="#home">HOME</a></p>
+            <p class="header-el"><a href="#quem-somos">QUEM SOMOS</a></p>
+            <p class="header-el"><a href="#menu">MENU</a></p>
+            <p class="header-el"><a href="#horarios">HORÁRIOS</a></p>
+            <p class="header-el"><a href="#contato-id">CONTATO</a></p>
+        </div>
         <div class="header-el">
             <img src="imgs/svg/instagram-svgrepo-com.svg" alt="">
             <img src="imgs/svg/facebook-176-svgrepo-com.svg" alt="">
             <img src="imgs/svg/whatsapp-128-svgrepo-com.svg" alt="">
         </div>
     </header>
+
+    <section class="hidden escondido">
+        <div class="div-p-menu">
+            <p class="header-el"><a href="#home">HOME</a></p>
+            <p class="header-el"><a href="#quem-somos">QUEM SOMOS</a></p>
+            <p class="header-el"><a href="#menu">MENU</a></p>
+            <p class="header-el"><a href="#horarios">HORÁRIOS</a></p>
+            <p class="header-el"><a href="#contato-id">CONTATO</a></p>
+        </div>
+    </section>
 
     <section class="section home-section flex-class" id="home">
         <h1 class="h1">Heute</h1>
