--- a/restaurante/index.html
+++ b/restaurante/index.html
@@ -25,19 +25,19 @@
             <p class="header-el"><a href="#contato-id">CONTATO</a></p>
         </div>
         <div class="header-el">
-            <img src="imgs/svg/instagram-svgrepo-com.svg" alt="">
-            <img src="imgs/svg/facebook-176-svgrepo-com.svg" alt="">
-            <img src="imgs/svg/whatsapp-128-svgrepo-com.svg" alt="">
+            <a href=""><img src="imgs/svg/instagram-svgrepo-com.svg" alt=""></a>
+            <a href=""><img src="imgs/svg/facebook-176-svgrepo-com.svg" alt=""></a>
+            <a href="https://api.whatsapp.com/send?phone=5521971809352" target="_blank"><img src="imgs/svg/whatsapp-128-svgrepo-com.svg" alt=""></a>
         </div>
     </header>
 
     <section class="hidden escondido">
         <div class="div-p-menu">
-            <p class="header-el"><a href="#home">HOME</a></p>
-            <p class="header-el"><a href="#quem-somos">QUEM SOMOS</a></p>
-            <p class="header-el"><a href="#menu">MENU</a></p>
-            <p class="header-el"><a href="#horarios">HORÁRIOS</a></p>
-            <p class="header-el"><a href="#contato-id">CONTATO</a></p>
+            <p class="header-el header-el-hidden"><a href="#home">HOME</a></p>
+            <p class="header-el header-el-hidden"><a href="#quem-somos">QUEM SOMOS</a></p>
+            <p class="header-el header-el-hidden"><a href="#menu">MENU</a></p>
+            <p class="header-el header-el-hidden"><a href="#horarios">HORÁRIOS</a></p>
+            <p class="header-el header-el-hidden"><a href="#contato-id">CONTATO</a></p>
         </div>
     </section>
 
@@ -131,9 +131,9 @@
         <div class="footer-svg">
             <img src="imgs/svg/instagram-svgrepo-com.svg" alt="">
             <img src="imgs/svg/facebook-176-svgrepo-com.svg" alt="">
-            <img src="imgs/svg/whatsapp-128-svgrepo-com.svg" alt="">
+            <a href="https://api.whatsapp.com/send?phone=5521971809352" target="_blank"><img src="imgs/svg/whatsapp-128-svgrepo-com.svg" alt=""></a>
         </div>
-        <p class="creditos">Site criado por <a href="github.com/guibaumer">Guilherme</a>.</p>
+        <p class="creditos">Site criado por <a href="https://github.com/guibaumer">Guilherme</a>.</p>
     </footer>
     <script src="js/index.js"></script>
 </body>
