--- a/restaurante/index.html
+++ b/restaurante/index.html
@@ -25,8 +25,8 @@
             <p class="header-el"><a href="#contato-id">CONTATO</a></p>
         </div>
         <div class="header-el">
-            <a href=""><img src="imgs/svg/instagram-svgrepo-com.svg" alt=""></a>
-            <a href=""><img src="imgs/svg/facebook-176-svgrepo-com.svg" alt=""></a>
+            <a href="https://www.instagram.com/jorginhomello/" target="_blank"><img src="imgs/svg/instagram-svgrepo-com.svg" alt=""></a>
+            <a href="https://www.facebook.com/lanchoneteriodaprata/" target="_blank"><img src="imgs/svg/facebook-176-svgrepo-com.svg" alt=""></a>
             <a href="https://api.whatsapp.com/send?phone=5521971809352" target="_blank"><img src="imgs/svg/whatsapp-128-svgrepo-com.svg" alt=""></a>
         </div>
     </header>
@@ -119,7 +119,7 @@
                 <h2 class="menu-h2">Entre em contato</h2>
                 <p class="contato-p">email.restaurante@email.com</p>
                 <p class="contato-p">47 99999-9999</p>
-                <img src="imgs/svg/location-map-navigation-svgrepo-com-white.svg" alt="">
+                <a href="https://goo.gl/maps/ynLzbte2fw7rEmW69" target="_blank"><img src="imgs/svg/location-map-navigation-svgrepo-com-white.svg" alt=""></a>
             </div>
         </div>
     </section>
