--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="imgs/favicons/icons8-planet-color-32.png" type="image/x-icon">
 </head>
@@ -18,12 +18,13 @@
     <nav class="nav-menu">
 
         <div class="svg-icons">
-            <a href="https://github.com/guibaumer" target="_blank"><img src="imgs/svgs/github-142-svgrepo-com.svg" alt=""></a>
-            <a href="#" target="_blank"><img src="imgs/svgs/linkedin-round-svgrepo-com.svg" alt=""></a>
+            <a href="https://github.com/guibaumer" target="_blank" rel="noopener"><img src="imgs/svgs/github-142-svgrepo-com.svg" alt="logo do github"></a>
+            <a href="#" target="_blank" rel="noopener"><img src="imgs/svgs/linkedin-round-svgrepo-com.svg" alt="logo do linkedin"></a>
         </div>
 
         <ul>
             <li><a href="#who-am-i">Quem sou?</a></li>
+            <li><a href="#experience">Experiência</a></li>
             <li><a href="#skills-id">Habilidades</a></li>
             <li><a href="#projetos-id">Projetos</a></li>
             <li><a href="#contato-id">Contato</a></li>
@@ -59,7 +60,7 @@
                     <img class="svg"  src="imgs/svgs/react-logo-programming-2-svgrepo-com.svg" alt="">
                 </div>     
 
-                <a href="#who-am-i"><img src="imgs/svgs/angles-down-solid.svg" alt="" class="arrow-down"></a>
+                <a href="#who-am-i"><img src="imgs/svgs/angles-down-solid.svg" alt="flecha para baixo" class="arrow-down"></a>
               </section>
 
         <section class="section whoAmI" id="who-am-i">
@@ -76,44 +77,71 @@
             </div>
         </section>
 
+        <section class="section experience-section" id="experience">
+            <h2>EXPERIÊNCIA PROFISSIONAL</h2>
+
+            <div class="experience">
+                <p>Minha experiência com a área é baixa: se resume apenas ao meu trabalho como freelancer. Sou cadastrado na plataforma Workana
+                    e lá consegui alguns trabalhos com a intenção de ganhar experiência. Cheque meu perfil!
+                </p> 
+            </div>
+
+            <p class="p-workana">
+                    <a href=""><img src="imgs/svgs/workana.svg" alt="" class="workana-logo"></a>
+                </p>
+
+        </section>
+
         <section class="section skills background-degrade" id="skills-id">
             <h2>Habilidades</h2>
             <section class="grid">
 
                 <div class="curso">
                     <p class="tipo">Curso</p>
-                    <h4 class="nome"><a href="https://www.cursoemvideo.com/curso/javascript/" target="_blank">Javascript (40 horas)</a></h4>
+                    <h4 class="nome"><a rel="noopener" href="https://www.cursoemvideo.com/curso/javascript/" target="_blank">Javascript (40 horas)</a></h4>
+                    <p class="fornecedor">- Curso Em Vídeo</p>
+                    <p class="estado">Completo</p>
+                </div>
+                <div class="curso pt-0">
+                    <p class="tipo">Curso</p>
+                    <h4 class="nome"><a rel="noopener" href="https://www.cursoemvideo.com/curso/curso-html5-e-css3-modulo-3-de-5-40-horas/" target="_blank">HTML e CSS - módulo 3 (40 horas)</a></h4>
+                    <p class="fornecedor">- Curso Em Vídeo</p>
+                    <p class="estado">Completo</p>
+                </div>
+                <div class="curso pt-0">
+                    <p class="tipo">Curso</p>
+                    <h4 class="nome"><a rel="noopener" href="https://www.cursoemvideo.com/curso/curso-html5-e-css3-modulo-4-de-5-40-horas/" target="_blank">HTML e CSS - módulo 4 (40 horas)</a></h4>
                     <p class="fornecedor">- Curso Em Vídeo</p>
                     <p class="estado">Completo</p>
                 </div>
                 <div class="curso">
                     <p class="tipo">Curso</p>
-                    <h4 class="nome"><a href="https://www.cursoemvideo.com/curso/curso-html5-e-css3-modulo-3-de-5-40-horas/" target="_blank">HTML e CSS - módulo 3 (40 horas)</a></h4>
-                    <p class="fornecedor">- Curso Em Vídeo</p>
-                    <p class="estado">Completo</p>
-                </div>
-                <div class="curso">
-                    <p class="tipo">Curso</p>
-                    <h4 class="nome"><a href="https://www.cursoemvideo.com/curso/curso-html5-e-css3-modulo-4-de-5-40-horas/" target="_blank">HTML e CSS - módulo 4 (40 horas)</a></h4>
-                    <p class="fornecedor">- Curso Em Vídeo</p>
-                    <p class="estado">Completo</p>
-                </div>
-                <div class="curso">
-                    <p class="tipo">Curso</p>
-                    <h4 class="nome"><a href="https://www.cursoemvideo.com/curso/curso-pratico-de-seo-modulo-01/" target="_blank">SEO - módulo 1 (40 horas)</a></h4>
+                    <h4 class="nome"><a rel="noopener" href="https://www.cursoemvideo.com/curso/curso-pratico-de-seo-modulo-01/" target="_blank">SEO - módulo 1 (40 horas)</a></h4>
                     <p class="fornecedor">- Curso Em Vídeo</p>
                     <p class="estado">Completo</p>
                 </div>
                 <div class="curso pt-0 incompleto">
                     <p class="tipo">Curso</p>
-                    <h4 class="nome"><a href="https://www.udemy.com/course/curso-de-javascript-moderno-do-basico-ao-avancado/" target="_blank">Javascript e Typescript (140 horas)</a></h4>
+                    <h4 class="nome"><a rel="noopener" href="https://www.udemy.com/course/curso-de-javascript-moderno-do-basico-ao-avancado/" target="_blank">Javascript e Typescript (140 horas)</a></h4>
                     <p class="fornecedor">- Udemy</p>
                     <p class="estado cursando">Cursando (50%)</p>
                 </div>
                 <div class="curso pt-0">
                     <p class="tipo">Curso</p>
-                    <h4 class="nome"><a href="https://www.udemy.com/course/html5-e-css3-tecnicas-avancadas-com-flexbox-e-3-projetos/" target="_blank">HTML e CSS avançados (10 horas)</a></h4>
+                    <h4 class="nome"><a rel="noopener" href="https://www.udemy.com/course/html5-e-css3-tecnicas-avancadas-com-flexbox-e-3-projetos/" target="_blank">HTML e CSS avançados (10 horas)</a></h4>
                     <p class="fornecedor">- Udemy</p>
+                    <p class="estado">Completo</p>
+                </div>
+                <div class="curso pt-0 completo">
+                    <p class="tipo">Curso</p>
+                    <h4 class="nome"><a rel="noopener" href="https://www.udemy.com/course/react-do-zero-a-maestria-c-hooks-router-api-projetos/" target="_blank">React do Zero a Maestria (30 horas)</a></h4>
+                    <p class="fornecedor">- Udemy</p>
+                    <p class="estado">Completo</p>
+                </div>
+                <div class="curso completo">
+                    <p class="tipo">Curso</p>
+                    <h4 class="nome"><a rel="noopener" href="https://www.cursoemvideo.com/curso/excell/" target="_blank">Excel Básico (40 horas)</a></h4>
+                    <p class="fornecedor">- Curso Em Vídeo</p>
                     <p class="estado">Completo</p>
                 </div>
             </section>
@@ -127,7 +155,7 @@
                 <div class="project-data">
                     <h4>Gerador de CPF</h4>
                     <p>Projeto desenvolvido com Javascript, HTML e CSS. Gera um CPF válido novo a cada clique.</p>
-                    <a class="visitar-site" target="_blank" href="https://guibaumer.github.io/cursoUdemy/0-exercicios/exercicio13-criacpf/index.html">VISITAR</a>
+                    <a rel="noopener" class="visitar-site" target="_blank" href="https://guibaumer.github.io/cursoUdemy/0-exercicios/exercicio13-criacpf/index.html">VISITAR</a>
                 </div>
             </div>
 
@@ -136,9 +164,9 @@
                 <div class="project-data">
                     <h4>Doceria</h4>
                     <p>Projeto desenvolvido com HTML, CSS e um pouco de Javascript. Criado para exercitar a capacidade de replicar designs 
-                        e torná-los responsivos. Projeto do <a target="_blank" href="https://www.udemy.com/course/html5-e-css3-tecnicas-avancadas-com-flexbox-e-3-projetos/">curso de CSS Avançado do HoraDeCodar</a>.
+                        e torná-los responsivos. Projeto do <a rel="noopener" target="_blank" href="https://www.udemy.com/course/html5-e-css3-tecnicas-avancadas-com-flexbox-e-3-projetos/">curso de CSS Avançado do HoraDeCodar</a>.
                     </p>
-                    <a class="visitar-site" target="_blank" href="https://guibaumer.github.io/css-avancado/0-projeto-doceria/">VISITAR</a>
+                    <a rel="noopener" class="visitar-site" target="_blank" href="https://guibaumer.github.io/css-avancado/0-projeto-doceria/">VISITAR</a>
 
                 </div>
             </div>
@@ -147,8 +175,8 @@
                 <div class="project project-3"></div>
                 <div class="project-data">
                     <h4>WhatsApp Clone</h4>
-                    <p>Site desenvolvido com apenas HTML e CSS (responsivo, assim como os outros). Projeto de clone do WhatsApp do <a target="_blank" href="https://www.udemy.com/course/html5-e-css3-tecnicas-avancadas-com-flexbox-e-3-projetos/">curso de CSS Avançado do HoraDeCodar</a>. </p>
-                    <a class="visitar-site" target="_blank" href="https://guibaumer.github.io/css-avancado/2-projeto-clone/meu-projeto/">VISITAR</a>
+                    <p>Site desenvolvido com apenas HTML e CSS (responsivo, assim como os outros). Projeto de clone do WhatsApp do <a rel="noopener" target="_blank" href="https://www.udemy.com/course/html5-e-css3-tecnicas-avancadas-com-flexbox-e-3-projetos/">curso de CSS Avançado do HoraDeCodar</a>. </p>
+                    <a rel="noopener" class="visitar-site" target="_blank" href="https://guibaumer.github.io/css-avancado/2-projeto-clone/meu-projeto/">VISITAR</a>
 
                 </div>
             </div>
@@ -157,8 +185,8 @@
                 <div class="project project-4"></div>
                 <div class="project-data">
                     <h4>Página do Google</h4>
-                    <p>Site desenvolvido com apenas HTML e CSS (responsivo, assim como os outros). Projeto de clone do WhatsApp do <a target="_blank" href="https://www.udemy.com/course/html5-e-css3-tecnicas-avancadas-com-flexbox-e-3-projetos/">curso de CSS Avançado do HoraDeCodar</a>. </p>
-                    <a class="visitar-site" target="_blank" href="https://guibaumer.github.io/css-avancado/3-projeto-google/meu-projeto/">VISITAR</a>
+                    <p>Site desenvolvido com apenas HTML e CSS (responsivo, assim como os outros). Projeto de clone do WhatsApp do <a rel="noopener" target="_blank" href="https://www.udemy.com/course/html5-e-css3-tecnicas-avancadas-com-flexbox-e-3-projetos/">curso de CSS Avançado do HoraDeCodar</a>. </p>
+                    <a rel="noopener" class="visitar-site" target="_blank" href="https://guibaumer.github.io/css-avancado/3-projeto-google/meu-projeto/">VISITAR</a>
 
                 </div>
                 </div>
@@ -168,10 +196,20 @@
                     <div class="project-data">
                         <h4>Gerador de Senha</h4>
                         <p>Site desenvolvido com HTML, CSS e Javascript. Gera uma senha conforme selecionadas as opções.</p>
-                        <a class="visitar-site" target="_blank" href="https://guibaumer.github.io/cursoUdemy/0-exercicios/exercicio14-senha/index.html">VISITAR</a>
+                        <a rel="noopener" class="visitar-site" target="_blank" href="https://guibaumer.github.io/cursoUdemy/0-exercicios/exercicio14-senha/index.html">VISITAR</a>
     
                     </div>
             </div>
+
+            <div class="container">
+                <div class="project project-6"></div>
+                <div class="project-data">
+                    <h4>Lista de Tarefas - React</h4>
+                    <p>Site desenvolvido com o framework React. Ele armazena as tarefas no local storage.</p>
+                    <a rel="noopener" class="visitar-site" target="_blank" href="https://guibaumer.github.io/lista-local_storage">VISITAR</a>
+
+                </div>
+        </div>
 
         </section>
 
@@ -181,17 +219,17 @@
                 <h2>Contato</h2>
                 <p><span class="negrito">Email para contato:</span> guilherme.a.baumer@gmail.com</p>
                 <div>
-                    <a href="">Linkedin</a>
-                    <a href="https://github.com/guibaumer" target="_blank">Github</a>
+                    <a rel="noopener" href="#" target="_blank">Linkedin</a>
+                    <a rel="noopener" href="https://github.com/guibaumer" target="_blank">Github</a>
                 </div>
             </div>
 
-            <img src="imgs/signboard.png" alt="">
+            <img src="imgs/signboard.png" alt="placa com a escrita 'thank you'">
         </section>
 
     </main>
     <footer>
-        <p>Site criado por <a href="https://github.com/guibaumer" target="_blank">Guilherme</a>.</p>
+        <p>Site criado por <a rel="noopener" href="https://github.com/guibaumer" target="_blank">Guilherme</a>.</p>
     </footer>
     <script src="index.js"></script>
 </body>
